# sillyhacks

./: get_coords.py  playground.ipynb  pyproject.toml
MyReactNativeApp/: package-lock.json
Scripts/: get_coords.py
backend/: manage.py
backend/backend/: asgi.py  settings.py  urls.py
backend/chat/: consumers.py  routing.py
backend/dasite/: admin.py  load_locations.py  models.py  taco_bell_coords.csv  urls.py  views.py
backend/dasite/management/commands/: load_locations.py
backend/dasite/migrations/: 0001_initial.py  0002_dongable.py  0002_rename_room_id_user_room.py  0003_alter_tacoentryevent_status.py  0003_dongable_id_alter_dongable_user.py  0004_remove_dongable_id_alter_dongable_user.py
backend/data/: dongs.csv  users.csv
backend/sillyhacks/: asgi.py  settings.py  urls.py  wsgi.py
backend2/backend2/: asgi.py  settings.py  urls.py  wsgi.py
backend2/chat/: consumers.py
backend2/dasite/: admin.py  apps.py  models.py  urls.py  views.py
backend2/dasite/migrations/: 0001_initial.py  0002_alter_dong_dong_type.py  0002_alter_user_user_id.py  0005_dongable_id_alter_dongable_user.py  0006_remove_dongable_id_alter_dongable_user.py
mobile/: App.tsx  app.json  bun.lockb  constants.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
mobile/app/: index.tsx  onboarding.tsx
mobile/app/(tabs)/: _layout.tsx  history.tsx  index.tsx  inventory.tsx  leaderboard.tsx
mobile/app/authed/: _layout.tsx
mobile/app/authed/(tabs)/: _layout.tsx  history.tsx  index.tsx  leaderboard.tsx
mobile/components/: Loading.tsx
scripts/: get_coords.py
