[tool.poetry]
name = "sillyhacks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
channels = {extras = ["daphne"], version = "^4.0.0"}
django = "^5.0.3"
channels-redis = "^4.2.0"
googlemaps = "^4.10.0"
pandas = "^2.2.1"
djangorestframework = "^3.15.1"
pyfcm = "^1.5.4"
fcm-django = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
